--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "isbot": "^5",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.8"
@@ -61,5 +62,8 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
