--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@netlify/vite-plugin": "^2.7.9",
     "@react-router/dev": "^7.7.1",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
