--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
-  command = "yarn react-router build"
-  publish = "build/client"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  command = "yarn build"
+  publish = "dist"
