--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
 [build]
-  command = "yarn build"
-  publish = "dist"
+  command = "yarn react-router build"
+  publish = "build/client"
+
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/ssr"
+  status = 200
+
