--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mappedin-demo
     env: node
     region: frankfurt
-    buildCommand: yarn install --frozen-lockfile && yarn build
-    startCommand: yarn start
+    buildCommand: pnpm install --frozen-lockfile && pnpm build
+    startCommand: pnpm start
     plan: free
 
