--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@lucide/lab": "^0.1.2",
     "@mappedin/react-sdk": "^6.0.1-beta.53",
+    "@netlify/vite-plugin-react-router": "^2.1.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -27,7 +28,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "@tailwindcss/vite": "^4.1.11",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@netlify/vite-plugin": "^2.7.11",
     "@react-router/dev": "^7.7.1",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
